--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/history": "4",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/qs": "^6.9.7",
@@ -14,6 +15,7 @@
     "@types/react-router-dom": "5.1.7",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "history": "4",
     "node-sass": "4.14.1",
     "qs": "^6.10.3",
     "react": "^17.0.2",
