--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/history": "4",
     "@types/jest": "^27.4.1",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^16.11.26",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.43",
@@ -16,6 +17,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "history": "4",
+    "jwt-decode": "^3.1.2",
     "node-sass": "4.14.1",
     "qs": "^6.10.3",
     "react": "^17.0.2",
