--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -3,32 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/history": "4",
-    "@types/jest": "^27.4.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
     "@types/jwt-decode": "^3.1.0",
-    "@types/node": "^16.11.26",
+    "@types/node": "^12.0.0",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "@types/react-native": "0.63.40",
-    "@types/react-router-dom": "5.1.7",
-    "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
-    "history": "4",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "jwt-decode": "^3.1.2",
     "node-sass": "4.14.1",
-    "qs": "^6.10.3",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
-    "react-content-loader": "^6.2.0",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.29.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "react-hook-form": "^7.10.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
